--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
   "author": "Jeferson Silva <jeferson.i.silva@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "docker compose up --build --force-recreate --remove-orphans"
+    "dev": "sh ./.bin/dev.sh"
   }
 }
