fix: Correção migration e seed automaticas ao iniciar aplicação

--- a/apache-php/supervisord.conf
+++ b/apache-php/supervisord.conf
@@ -5,7 +5,7 @@ logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
 
 [program:backend-app]
-command=/bin/bash -c "cd /var/www/backend && composer install && php artisan app:init"
+command=/bin/bash -c "cd /var/www/html && composer install && php artisan migrate && php artisan db:seed"
 environment=LARAVEL_SAIL="1"
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
@@ -13,7 +13,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:backend-cron]
-command=/bin/bash -c "sleep 60 && php /var/www/backend/artisan schedule:run"
+command=/bin/bash -c "sleep 60 && php /var/www/html/artisan schedule:run"
 environment=LARAVEL_SAIL="1"
 numprocs=1
 autostart=true
@@ -21,14 +21,3 @@ autorestart=true
 startsecs=0
 startretries=3
 priority=999
-
-# [program:queue]
-# command=/bin/bash -c "php /var/www/html/artisan queue:work --sleep=3 --tries=3"
-# environment=LARAVEL_SAIL="1"
-# stdout_logfile=/var/www/html/storage/logs/queue.log
-# stderr_logfile=/var/www/html/storage/logs/queue-error.log
-# numprocs=1
-# autostart=true
-# autorestart=true
-# startsecs=0
-# startretries=3
