--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,26 +1,24 @@
 {
-  "name": "app",
-  "version": "0.1.0",
+  "name": "nuxt-app",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "nuxt": "^3.14.1592",
+    "vue": "latest",
+    "vue-router": "latest"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "@date-io/dayjs": "^3.0.0",
+    "@iconify/vue": "^4.1.2",
+    "dayjs": "^1.11.13",
+    "vite-plugin-vuetify": "^2.0.4",
+    "vuetify": "^3.7.4"
   }
 }
